# pneumo_vision

./: .gitignore  README.md  pyproject.toml
pneumo_vision/: pneumo_vision_model.ipynb
