[tool.poetry]
name = "pneumo-vision"
version = "0.1.0"
description = "A Computer Vision machine learning model to detect pneumonia in chest xray images"
authors = ["Zachary King <zcking@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12.0"
torch = "^2.2.2"
torchvision = "^0.17.2"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
torchmetrics = "^1.3.2"
tqdm = "^4.66.2"
mlxtend = "^0.23.1"
datasets = "^2.19.0"
transformers = {extras = ["torch"], version = "^4.40.1"}
evaluate = "^0.4.1"
accelerate = "^0.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
